feat: Fixes and session creation
